i fixed the weird shift to the right , now clicking on image changes it for the product page , and i added sort to search page

--- a/Pages/Customer/ProductDetailsPage/product_details.css
+++ b/Pages/Customer/ProductDetailsPage/product_details.css
@@ -40,6 +40,23 @@ body {
 /* IMAGES */
 .product-images {
   width: 50%;
+  display: flex;
+  flex-direction: row; 
+}
+
+.display-images{
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-sm);
+  margin-inline:var(--space-sm) ;
+  
+}
+.display-images img{
+ width: 50px;
+ height: 50px; 
+}
+.display-images img:hover{
+  cursor: pointer;
 }
 
 .placeholder {
@@ -49,6 +66,12 @@ body {
   justify-content: center;
   color: #777;
   font-size: 14px;
+  flex: 1;/* take as much as you can*/
+}
+.placeholder img{
+  height: 100%;
+  width: 100%;
+  transition: 0.4s;
 }
 
 .placeholder.large {
@@ -273,3 +296,6 @@ body {
     align-items: flex-start;
   }
 }
+
+
+/* added these after js */
